# BeBe

./: .gitignore  CMakeLists.txt  README.md  bebe.cc  bebe.gp  bebe_histos.cc  test_reading.cc
include/: DataReader.h  HistoManager.h  Types.h  data_reader.h  event.h  pulse.h  tree_reader.h  types.h
src/: CMakeLists.txt  DataReader.cc  Pulse.cc  data_reader.cc  event.cc  pulse.cc  tree_reader.cc
